quick fix for multi-fleet arisync;